--- a/client/src/components/nav/Nav.module.css
+++ b/client/src/components/nav/Nav.module.css
@@ -1,72 +1,96 @@
+
 .navBar {
-  background-color: #fff; /* Cor de fundo da barra de navegação */
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
-  padding: 10px 20px; /* Espaçamento interno */
-  display: flex; /* Flexbox para centralizar horizontalmente e verticalmente */
-  justify-content: center; /* Centralizar horizontalmente */
-  align-items: center; /* Centralizar verticalmente */
-  height: 80px; /* Altura da barra de navegação */
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
-
-
 
 
 .logo {
-  display: flex; /* Flexbox para alinhar itens horizontalmente */
-  align-items: center; /* Centralizar verticalmente os itens */
-  font-size: 1.5rem; /* Tamanho da fonte do texto do logo */
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  background: #090580;
+  color: #fff;
 }
 
 .logo img {
-  margin-right: 10px; /* Espaçamento à direita da imagem do logo */
+  margin-left: 20px;
+  margin-right: 50px;
 }
+
 
 .navLinks {
-  list-style: none; /* Remover marcadores de lista */
-  display: flex; /* Flexbox para alinhar itens horizontalmente */
-  margin: 0; /* Remover margens da lista */
-  padding: 0; /* Remover preenchimento da lista */
+  display: flex;
+  align-items: center;
 }
 
-.navLinks li {
-  margin-right: 20px; /* Espaçamento à direita entre os itens de navegação */
+.navLinks h3 {
+  margin-right: 3rem;
 }
 
 .navLinks a {
-  text-decoration: none; /* Remover sublinhado de links */
-  color: #333; /* Cor do texto dos links */
-  font-weight: bold; /* Negrito para os links */
-  transition: color 0.2s; /* Transição suave da cor ao passar o mouse */
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.2s;
 }
 
 .navLinks a:hover {
-  color: #9165ef; /* Cor do texto dos links ao passar o mouse */
+  color: #9165ef;
 }
+
 
 input[type="text"] {
   align-items: center;
   display: flex;
-  
-  border: none; /* Remover a borda padrão do input */
-  border-radius: 20px; /* Bordas arredondadas */
-  padding: 10px 15px; /* Espaçamento interno */
-  font-size: 1rem; /* Tamanho da fonte */
-  margin-left: 20px; /* Espaçamento à esquerda do input */
-  width: 200px; /* Largura do input */
+  border: none;
+  border-radius: 20px;
+  padding: 10px 15px;
+  font-size: 1rem;
+  margin-right: 20px;
+  width: 40rem;
 }
 
-/* Estilos específicos para telas menores (exemplo: dispositivos móveis) */
+
+.loginLink {
+  font-size: 1rem;
+  font-weight: bold;
+  transition: color 0.2s;
+}
+
+.loginLink a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.loginLink a:hover {
+  color: #9165ef;
+}
+
 @media (max-width: 768px) {
   .navBar {
-    flex-direction: column; /* Empilhar itens verticalmente em telas menores */
-    align-items: flex-start; /* Alinhar itens à esquerda em telas menores */
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .navLinks {
-    margin-top: 10px; /* Espaçamento superior entre os links e o input */
+    margin-top: 10px;
   }
 
-  .navLinks li {
-    margin: 0; /* Remover margem entre os itens de navegação em telas menores */
+  .navLinks h3 {
+    margin: 10;
   }
+
+}
+.loginLink {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.2s;
 }
