--- a/client/src/components/banner/Banner.module.css
+++ b/client/src/components/banner/Banner.module.css
@@ -1,12 +1,14 @@
 .banner {
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    height: 100vh;
-  }
-  
-  .banner img {
-    width: 60%; 
-    border: 3px solid #488fb1;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.banner img {
+  width: 60%;
+  border: 3px solid #488fb1;
+  -webkit-box-shadow: 0px 0px 127px 0px rgba(88, 143, 177, 0.9);
+  -moz-box-shadow: 0px 0px 127px 0px rgba(88, 143, 177, 0.9);
+  box-shadow: 0px 0px 127px 0px rgba(88, 143, 177, 0.9);
+}
