--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -1,30 +1,30 @@
 .footer {
-    background-color: #090580;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50em;
-  }
-  
-  .footerLinks {
-    list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .footerLinks li {
-    margin-right: 20px;
-  }
-  
-  .footerLinks a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  .footerText {
-    font-size: 1rem;
-  }
+  background-color: #090580;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.footerLinks {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.footerLinks li {
+  margin-right: 20px;
+}
+
+.footerLinks a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.footerText {
+  font-size: 1rem;
+}
